--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -2,7 +2,7 @@
     font-family: "SF Pro Display";
     font-size: 11pt;  
     color: white;
-    padding: 2px 6px 2px 6px;
+    padding: 1px 7px 1px 7px;
     border-radius: 0.6rem;
     box-shadow: none;
     text-shadow: none;
@@ -10,8 +10,17 @@
 }
 
 window#waybar {
-    background: transparent;  /* Make the Waybar background transparent */
-    padding: 0.5rem; /* Adds some padding around the Waybar*/
+    all: unset;
+}
+
+.modules-left {
+    margin: 5px 0px 2px 10px;
+}
+.modules-center {
+    margin: 5px 0px 2px 0px;
+}
+.modules-right {
+    margin: 5px 10px 2px 0px;
 }
 
 #window,
@@ -19,14 +28,14 @@ window#waybar {
 #disk,
 #network,
 #wireplumber,
-#clock,
+#custom-combined-time-date,
 #cpu,
 #workspaces {
     margin-left: 7px;
     border: 1px rgba(255, 255, 255, 0.5) solid;
 }
 
-#clock {
+#custom-combined-time-date {
     background: transparent;
 }
 
@@ -50,5 +59,5 @@ window#waybar {
 #cpu:hover,
 #workspaces:hover,
 #cpu.critical {
-    color: #d80000;
+    color: #898989;
 }
