--- a/waybar/style.css
+++ b/waybar/style.css
@@ -13,12 +13,8 @@ window#waybar {
     all: unset;
 }
 
-.modules-left {
-    margin: 5px 0px 2px 10px;
-}
-.modules-center {
-    margin: 5px 0px 2px 0px;
-}
+.modules-left,
+.modules-center,
 .modules-right {
     margin: 5px 10px 2px 0px;
 }
@@ -33,6 +29,11 @@ window#waybar {
 #workspaces {
     margin-left: 7px;
     border: 1px rgba(255, 255, 255, 0.5) solid;
+}
+
+#workspaces {
+    padding: 0px;
+    margin: 0px;
 }
 
 #custom-combined-time-date {
